[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
entity = { path = "../entity" }
db = { path = "../db" }
sea-orm = { version = "1.0.0-rc.5" }
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
rand = "0.8.5"
md5 = "0.7.0"
rsa = "0.9.6"
base64 = "0.22.1"
hex = "0.4.2"
idgenerator = "2.0.0"
serde_json = "1.0"