[package]
name = "zenith-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
yew-router = { git = "https://github.com/yewstack/yew.git" }