[package]
name = "zenith-ui"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
gloo = "0.11.0"
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
yew-router = { git = "https://github.com/yewstack/yew.git" }
rand = "0.8.5"